--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon"
@@ -12,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "dropzone": "^6.0.0-beta.2",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8.36.0",
