--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file-storage",
+  "name": "eondrive",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -12,8 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.301.0",
+    "@aws-sdk/s3-request-presigner": "^3.301.0",
     "dotenv": "^16.0.3",
-    "dropzone": "^6.0.0-beta.2",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0"
   },
