--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,9 @@ S3_BUCKET_NAME = ""
 S3_BUCKET_REGION = ""
 S3_ACCESS_KEY_ID = ""
 S3_SECRET_ACCESS_KEY = ""
+
+# MYSQL
+MYSQL_HOST = ''
+MYSQL_USER = ''
+MYSQL_PASSWORD = ''
+MYSQL_DATABASE = ''
