--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-fileupload": "^1.4.0",
     "mysql2": "^3.2.0",
     "path": "^0.12.7",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "url": "^0.11.0"
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
+    "babel-core": "^6.26.3",
     "babel-loader": "^9.1.2",
     "eslint": "^8.36.0",
     "nodemon": "^2.0.22",
