--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-lambda": "^3.303.0",
     "@aws-sdk/client-s3": "^3.301.0",
     "@aws-sdk/s3-request-presigner": "^3.301.0",
+    "archiver": "^5.3.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "fs": "^0.0.1-security",
     "mysql2": "^3.2.0",
     "path": "^0.12.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "url": "^0.11.0"
+    "stream": "^0.0.2",
+    "url": "^0.11.0",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.21.4",
