--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,11 @@ PORT =
 # AWS S3
 S3_BUCKET_NAME = ""
 S3_BUCKET_REGION = ""
+
+# AWS LAMBDA
+LAMBDA_REGION = ""
+
+# USER CREDENTIALS
 S3_ACCESS_KEY_ID = ""
 S3_SECRET_ACCESS_KEY = ""
 
