--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
     "mysql2": "^3.2.0",
     "path": "^0.12.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "socket.io": "^4.6.1",
     "stream": "^0.0.2",
     "url": "^0.11.0",
     "zlib": "^1.0.5"
