--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --node-env=production --config webpack.config.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "lint": "eslint *.js */*.js */*/*.js"
   },
   "keywords": [],
   "author": "",
@@ -38,6 +39,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^9.1.2",
     "eslint": "^8.36.0",
+    "eslint-plugin-react": "^7.32.2",
     "nodemon": "^2.0.22",
     "webpack": "^5.77.0",
     "webpack-cli": "^5.0.1",
