[feat] Update for login related packages / Add user route

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
+NODE_ENV = "dev"
 PORT = 
 # AWS S3
 S3_BUCKET_NAME = ""
@@ -15,3 +16,6 @@ MYSQL_HOST = ''
 MYSQL_USER = ''
 MYSQL_PASSWORD = ''
 MYSQL_DATABASE = ''
+
+# SESSION SECRET
+SESSION_SECRET = ""
