--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@aws-sdk/client-s3": "^3.301.0",
     "@aws-sdk/s3-request-presigner": "^3.301.0",
     "archiver": "^5.3.1",
+    "argon2": "^0.30.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "express-session": "^1.17.3",
+    "express-validator": "^6.15.0",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "mysql2": "^3.2.0",
