--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@aws-sdk/s3-request-presigner": "^3.301.0",
     "archiver": "^5.3.1",
     "argon2": "^0.30.3",
+    "axios": "^1.3.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
@@ -34,6 +36,7 @@
     "socket.io": "^4.6.1",
     "stream": "^0.0.2",
     "url": "^0.11.0",
+    "uuid": "^9.0.0",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
