--- a/.env.template
+++ b/.env.template
@@ -1,15 +1,24 @@
 NODE_ENV = "dev"
 PORT = 
+
 # AWS S3
-S3_BUCKET_NAME = ""
-S3_BUCKET_REGION = ""
+S3_MAIN_BUCKET_NAME = ""
+S3_MAIN_BUCKET_REGION = ""
+S3_DOWNLOAD_BUCKET_NAME = ""
+S3_DOWNLOAD_BUCKET_REGION = ""
 
 # AWS LAMBDA
 LAMBDA_REGION = ""
 
 # USER CREDENTIALS
-S3_ACCESS_KEY_ID = ""
-S3_SECRET_ACCESS_KEY = ""
+IAM_USER_ACCESS_KEY_ID = ""
+IAM_USER_SECRET_ACCESS_KEY = ""
+
+# EXPIRES (sec)
+DEFAULT_S3_EXPIRES = 
+
+# CHUNK SIZE
+CHUNK_SIZE = 5 * 1024 * 1024
 
 # MYSQL
 MYSQL_HOST = ''
