[feat] Store session in redis

--- a/.env.template
+++ b/.env.template
@@ -26,5 +26,11 @@ MYSQL_USER = ''
 MYSQL_PASSWORD = ''
 MYSQL_DATABASE = ''
 
+# CACHE
+CACHE_HOST = ""
+CACHE_PORT = ""
+CACHE_USER = ""
+CACHE_PASSWORD = ""
+
 # SESSION SECRET
 SESSION_SECRET = ""
