--- a/package.json
+++ b/package.json
@@ -20,29 +20,27 @@
     "archiver": "^5.3.1",
     "argon2": "^0.30.3",
     "axios": "^1.3.5",
-    "cors": "^2.8.5",
+    "connect-redis": "^7.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "ioredis": "^5.3.1",
     "mysql2": "^3.2.0",
     "path": "^0.12.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "socket.io": "^4.6.1",
-    "stream": "^0.0.2",
     "url": "^0.11.0",
-    "uuid": "^9.0.0",
-    "zlib": "^1.0.5"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
-    "babel-core": "^6.26.3",
+    "babel-core": "^4.7.16",
     "babel-loader": "^9.1.2",
     "eslint": "^8.36.0",
     "eslint-plugin-react": "^7.32.2",
