[fix] Fix delete & upload bug

--- a/.env.template
+++ b/.env.template
@@ -15,10 +15,13 @@ IAM_USER_ACCESS_KEY_ID = ""
 IAM_USER_SECRET_ACCESS_KEY = ""
 
 # EXPIRES (sec)
-DEFAULT_S3_EXPIRES = 
+DEFAULT_S3_EXPIRES = 300
 
-# CHUNK SIZE
-CHUNK_SIZE = 5 * 1024 * 1024
+# CHUNK SIZE (MB)
+CHUNK_SIZE = 5
+
+# DEFAULT STORAGE (MB)
+BASIC = 50
 
 # MYSQL
 MYSQL_HOST = ''
