[feat] Add share link function

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,6 @@
 NODE_ENV = "dev"
 PORT = 
+HOST = "http://localhost:9999"
 
 # AWS S3
 S3_MAIN_BUCKET_NAME = ""
@@ -22,6 +23,9 @@ CHUNK_SIZE = 5
 
 # DEFAULT STORAGE (MB)
 BASIC = 50
+
+# SHARE LINK TOKEN LENGTH
+SHARE_TOKEN_LENGTH = 15
 
 # MYSQL
 MYSQL_HOST = ''
