--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.3.5",
     "connect-redis": "^7.0.1",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
