[build] deploy related & env setup

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,8 @@
-NODE_ENV = "dev"
+NODE_ENV = "dev" or "prod"
 PORT = 
-HOST = "http://localhost:9999"
+LOCAL_HOST = ""
+PROD_HOST = ""
+PROTOCOL = "HTTP" or "HTTPS"
 
 # AWS S3
 S3_MAIN_BUCKET_NAME = ""
@@ -38,7 +40,7 @@ CACHE_HOST = ""
 CACHE_PORT = ""
 CACHE_USER = ""
 CACHE_PASSWORD = ""
-CACHE_DB=
+CACHE_DB= ""
 
 # SESSION SECRET
 SESSION_SECRET = ""
