[chore] update code to control setting based on env

--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,8 @@ NODE_ENV = "dev" or "prod"
 PORT = 
 LOCAL_HOST = ""
 PROD_HOST = ""
-PROTOCOL = "HTTP" or "HTTPS"
+LOCAL_PROTOCOL = "HTTP" or "HTTPS"
+PROD_PROTOCOL = "HTTP" or "HTTPS"
 
 # AWS S3
 S3_MAIN_BUCKET_NAME = ""
