[build] change env template to better store secret var

--- a/.env.template
+++ b/.env.template
@@ -13,6 +13,7 @@ S3_DOWNLOAD_BUCKET_REGION = ""
 
 # AWS LAMBDA
 LAMBDA_REGION = ""
+LAMBDA_FUNCTION_NAME = ""
 
 # USER CREDENTIALS
 IAM_USER_ACCESS_KEY_ID = ""
