--- a/package.json
+++ b/package.json
@@ -31,23 +31,13 @@
     "ioredis": "^5.3.1",
     "mysql2": "^3.2.0",
     "path": "^0.12.7",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "socket.io": "^4.6.1",
     "url": "^0.11.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-react": "^7.18.6",
-    "babel-core": "^4.7.16",
-    "babel-loader": "^9.1.2",
     "eslint": "^8.36.0",
     "eslint-plugin-react": "^7.32.2",
-    "nodemon": "^2.0.22",
-    "webpack": "^5.77.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.2"
+    "nodemon": "^2.0.22"
   }
 }
