--- a/.env.template
+++ b/.env.template
@@ -31,6 +31,10 @@ BASIC = 50
 # SHARE LINK TOKEN LENGTH
 SHARE_TOKEN_LENGTH = 15
 
+# EXPIRATION DAYS
+EXPIRATION_DAYS = 1
+EXPIRATION_MIN = 5
+
 # MYSQL
 MYSQL_HOST = ''
 MYSQL_USER = ''
