--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "ioredis": "^5.3.1",
+    "luxon": "^3.3.0",
     "mysql2": "^3.2.0",
     "path": "^0.12.7",
     "socket.io": "^4.6.1",
