--- a/.env.template
+++ b/.env.template
@@ -31,9 +31,9 @@ BASIC = 50
 # SHARE LINK TOKEN LENGTH
 SHARE_TOKEN_LENGTH = 15
 
-# EXPIRATION DAYS
-EXPIRATION_DAYS = 1
-EXPIRATION_MIN = 5
+# EXPIRATION DURATION
+EXPIRATION_DAY = 1
+EXPIRATION_MIN = 2
 
 # MYSQL
 MYSQL_HOST = ''
