[chore] update default value in .env.template

--- a/.env.template
+++ b/.env.template
@@ -23,10 +23,10 @@ IAM_USER_SECRET_ACCESS_KEY = ""
 DEFAULT_S3_EXPIRES = 300
 
 # CHUNK SIZE (MB)
-CHUNK_SIZE = 5
+CHUNK_SIZE = 10
 
 # DEFAULT STORAGE (MB)
-BASIC = 50
+BASIC = 
 
 # SHARE LINK TOKEN LENGTH
 SHARE_TOKEN_LENGTH = 15
