--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
     "fs": "^0.0.1-security",
+    "geoip-lite": "^1.4.7",
     "http": "^0.0.1-security",
     "ioredis": "^5.3.1",
     "luxon": "^3.3.0",
