--- a/.env.template
+++ b/.env.template
@@ -20,20 +20,20 @@ IAM_USER_ACCESS_KEY_ID = ""
 IAM_USER_SECRET_ACCESS_KEY = ""
 
 # EXPIRES (sec)
-DEFAULT_S3_EXPIRES = 300
+DEFAULT_S3_EXPIRES = 
 
 # CHUNK SIZE (MB)
-CHUNK_SIZE = 10
+CHUNK_SIZE = 
 
 # DEFAULT STORAGE (MB)
 BASIC = 
 
 # SHARE LINK TOKEN LENGTH
-SHARE_TOKEN_LENGTH = 15
+SHARE_TOKEN_LENGTH = 
 
 # EXPIRATION DURATION
-EXPIRATION_DAY = 1
-EXPIRATION_MIN = 2
+EXPIRATION_DAY = 
+EXPIRATION_MIN = 
 
 # MYSQL
 MYSQL_HOST = ''
@@ -46,7 +46,7 @@ CACHE_HOST = ""
 CACHE_PORT = ""
 CACHE_USER = ""
 CACHE_PASSWORD = ""
-CACHE_DB= ""
+CACHE_DB = ""
 
 # SESSION SECRET
 SESSION_SECRET = ""
