--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/client-lambda": "^3.303.0",
     "@aws-sdk/client-s3": "^3.301.0",
     "@aws-sdk/s3-request-presigner": "^3.301.0",
+    "@socket.io/redis-adapter": "^8.2.0",
     "archiver": "^5.3.1",
     "argon2": "^0.30.3",
     "axios": "^1.3.5",
