[feat] 1. Update programs due to schema change 2. Add more specific error message 3. formatting

--- a/.env.template
+++ b/.env.template
@@ -28,6 +28,9 @@ CHUNK_SIZE =
 # DEFAULT STORAGE (MB)
 BASIC = 
 
+# ZIP SIZE LIMITATION (GB)
+ZIP_SIZE =
+
 # SHARE LINK TOKEN LENGTH
 SHARE_TOKEN_LENGTH = 
 
