[chore] remove sql backup files / update github action yml / update gitignore file

--- a/.github/workflows/toaws.yml
+++ b/.github/workflows/toaws.yml
@@ -7,9 +7,8 @@ on:
     branches:
       - 'feature_*'
       - 'fix_*'
-      - 'demo_*'
-      - 'testing_*'
       - 'develop'
+      - 'main'
 
 jobs:
   build:
