--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,7 @@ LOCAL_HOST = ""
 PROD_HOST = ""
 LOCAL_PROTOCOL = "HTTP" or "HTTPS"
 PROD_PROTOCOL = "HTTP" or "HTTPS"
+API_VERSION = "1.0"
 
 # AWS S3
 S3_MAIN_BUCKET_NAME = ""
