[feat] Complete two steps registration - verified mail required

--- a/.env.template
+++ b/.env.template
@@ -57,3 +57,9 @@ SESSION_SECRET = ""
 
 # SESSION ALIVE HOUR
 SESSION_HOUR = 
+
+# MAILERSEND API TOKEN
+MAILERSEND_API_KEY = ""
+
+# REGISTRATION CONFIRMATION LINK EXPIRED TIME (HOUR)
+CONFIRMATION_LINK_EXPIRED_HOUR = 
