--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "http": "^0.0.1-security",
     "ioredis": "^5.3.1",
     "luxon": "^3.3.0",
+    "mailersend": "^2.1.1",
     "mysql2": "^3.2.0",
     "path": "^0.12.7",
     "socket.io": "^4.6.1",
