[refactor] make the lambda related programs more easily be maintained

--- a/.env.template
+++ b/.env.template
@@ -16,6 +16,9 @@ S3_DOWNLOAD_BUCKET_REGION = ""
 LAMBDA_REGION = ""
 LAMBDA_FUNCTION_NAME = ""
 
+# TMP DIR
+TMP_DIR = "."
+
 # USER CREDENTIALS
 IAM_USER_ACCESS_KEY_ID = ""
 IAM_USER_SECRET_ACCESS_KEY = ""
