--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --silent --coverage --detectOpenHandles",
     "dev": "nodemon",
     "lint": "eslint *.js */*.js */*/*.js"
   },
@@ -39,8 +39,10 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.5",
     "eslint": "^8.36.0",
     "eslint-plugin-react": "^7.32.2",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22"
   }
 }
