[refactor] use .env to manage rate limiter time window

--- a/.env.template
+++ b/.env.template
@@ -61,6 +61,9 @@ SESSION_SECRET = ""
 # SESSION ALIVE HOUR
 SESSION_HOUR = 
 
+# RATE LIMITER TIME WINDOW (sec)
+RATE_LIMITER_TIME_WINDOW = 
+
 # MAILERSEND API TOKEN
 MAILERSEND_API_KEY = ""
 
