--- a/monitor/prometheus.yml
+++ b/monitor/prometheus.yml
@@ -14,7 +14,4 @@ scrape_configs:
 
   - job_name: node
     static_configs:
-      - targets: ['localhost:9100']
-      # now the target server and monitor server are the same
-      # usually they should be different servers
-      # - targets: ['172.31.19.122:9100']
+      - targets: ['172.31.19.122:9100']
