[fix] update download files limitation

--- a/.env.template
+++ b/.env.template
@@ -32,8 +32,11 @@ CHUNK_SIZE =
 # DEFAULT STORAGE (MB)
 BASIC = 
 
+# DOWNLOAD SIZE LIMITATION (MB)
+DOWNLOAD_SIZE = 
+
 # ZIP SIZE LIMITATION (GB)
-ZIP_SIZE =
+# ZIP_SIZE =
 
 # SHARE LINK TOKEN LENGTH
 SHARE_TOKEN_LENGTH = 
